add backend uri

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,5 +1,5 @@
 # API Configuration
-VITE_API_URL=http://localhost:5000/api
+VITE_API_URL=https://airtable-assignment-9gne.onrender.com/api
 
 # Airtable OAuth (optional, for frontend reference)
 VITE_AIRTABLE_CLIENT_ID=7495bcb8-248c-47a7-9d59-4432d79248ca
